jilles      2007/06/08 13:23:17 UTC	(20070608-8421)
  Log:
  Unbreak compile.
  

  Changes:	Modified:
  +2 -0		trunk/src/conf.c (File Modified) 


nenolod     2007/06/08 00:48:51 UTC	(20070608-8419)
  Log:
  - update example config
  

  Changes:	Modified:
  +10 -5	trunk/dist/example.conf (File Modified) 


nenolod     2007/06/08 00:48:04 UTC	(20070608-8417)
  Log:
  - split expiry setting into seperate nickserv::expiry and chanserv::expiry. general::expiry still supported, but warns about deprecation.
  

  Changes:	Modified:
  +2 -1		trunk/dist/example.motd (File Modified) 
  +0 -1		trunk/include/global.h (File Modified) 
  +4 -0		trunk/include/services.h (File Modified) 
  +2 -2		trunk/modules/chanserv/help.c (File Modified) 
  +2 -2		trunk/modules/nickserv/help.c (File Modified) 
  +55 -52	trunk/src/account.c (File Modified) 
  +29 -3	trunk/src/conf.c (File Modified) 
  +6 -3		trunk/src/ptasks.c (File Modified) 


jilles      2007/06/06 22:34:07 UTC	(20070606-8415)
  Log:
  hyperion: Use COLLIDE instead of KILL, to cut down on +k
  server notices. Unfortunately this also removes the reason
  (e.g. containing who sent a GHOST command) from channels
  and the victim; as a compensation, send a server notice
  (conspicuous) with the reason to the victim first.
  

  Changes:	Modified:
  +10 -0	trunk/modules/protocol/hyperion.c (File Modified) 


pippijn     2007/06/04 18:45:05 UTC	(20070604-8413)
  Log:
  Also removed the header files.
  

  Changes:	Modified:
  +22 -22	trunk/include/common.h (File Modified) 
  +1 -1		trunk/include/dictionary.h (File Modified) 
  + -		trunk/include/json/ (File Deleted) 
  +12 -81	trunk/include/jsonrpc.h (File Modified) 
  +2 -0		trunk/include/module.h (File Modified) 
  +0 -1		trunk/src/Makefile.in (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 
  +0 -1278	trunk/src/jsonrpc.c (File Deleted) 
  +1 -1		trunk/src/xmlrpc.c (File Modified) 


pippijn     2007/06/04 18:42:24 UTC	(20070604-8411)
  Log: